containerization/manifests/istio/istio-gateway.yaml
# istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flowise-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flowise-service
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - flowise-gateway
  http:
    - route:
        - destination:
            host: flowise-service
            port:
              number: 8080
